# ai-synthetic-data-generator

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  python_primer.py  streamlit_app.py
data/cache/: correct_0657637d0245ba8fd3276d2cc4614391.json  correct_06b3a312459148b18e9fe05089902e7a.json  correct_06f79f925fe582884c99dd8d432f9cc7.json  correct_10a02a6e019de3d174d98b87c9fd6434.json  correct_17b26b02e1640c30ef676ab4a959693b.json  correct_1bc3e09f329567e9600df692bf086a30.json  correct_1e5aff487eab5c93ed597919bfa3b706.json  correct_217ebe79273a9bbbfd60950169aac2f4.json  correct_2d0cf2f0a2a480fd72adfcb48de6fedf.json  correct_4171b3649c7bded3c19afce24affc95e.json  correct_5052ec81901077af6289c345a48a1bd9.json  correct_51b69e891869ea84c4fec23700f19566.json  correct_5327317f57b52f5ad3191baf3c8d0662.json  correct_5bfeaed2f8242649bab36d26d5f33ca9.json  correct_5fdabfb5896d9b005022e1953195f2ba.json  correct_67c2b0ef1f9ffd2f90e7172ad671c2e0.json  correct_73a7715bcae5c5ae44fd7a9ed897a762.json  correct_7e6772fb4b4717643f5c5e250592b684.json  correct_7f2a2080bca2221208469fe2a5009061.json  correct_916565c67607a5b10a90a47550b33f14.json  correct_a304dfe985f55f6b32a3e321ecf326e9.json  (+95 more)
docs/: PRD.md  audit-prompt.md  day5-plan.md
results/: correction_comparison.json  metrics.json  prd_gap_analysis.md
src/: analysis.py  corrector.py  evaluator.py  generator.py  schemas.py  templates.py  validator.py
tests/: test_analysis.py  test_corrector.py  test_evaluator.py  test_generator.py  test_schemas.py  test_templates.py  test_validator.py
(+18 files in other folders)
