[project]
name = "synthetic-data-home-diy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "instructor>=1.14.5",
    "matplotlib>=3.10.8",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

# Adds project root to sys.path so `from src.schemas import ...` works in tests
[tool.pytest.ini_options]
pythonpath = ["."]
